added .vscode to the git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 /env
-.vscode
-/.vscode
-*.vscode
-/.vscode/
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
